--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iwex-website",
-  "homepage": "https://athira-351.github.io/iwex-infomatics/",
+  "homepage": "https://athira-351.github.io/iwex-infomatics-website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
